--- a/02-scripts.backup/MID_mpa3_alphadiv.Rmd
+++ b/02-scripts.backup/MID_mpa3_alphadiv.Rmd
@@ -94,6 +94,7 @@ outliersF <- str_c(outliers_mpa3, collapse = "|")
 mpa3_species_decontam <- mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
   select(-one_of(poor_samples_mpa3))%>%
+  select(-matches("ARS|EXB|LIB|CSN|CSL|CSS|CSD")) %>%
   adorn_percentages(denominator = "col") %>%
   pivot_longer(!Species, names_to = "Library_ID", values_to = "Percent") %>%
   mutate(Percent = Percent * 100) %>%
@@ -173,7 +174,6 @@ species/genera.
 ```{r observed_species}
 # make Relab binary to make a presence/absence table
 presabs_table <- mpa3_species_decontam %>%
-  select(-matches("EXB|LIB|CSN|CSL|CSS|CSD")) %>%
   gather("Library_ID","Counts",2:ncol(.)) %>%
   spread(Species,Counts) %>%
   gather("Species","Counts",2:ncol(.)) %>%
@@ -229,9 +229,11 @@ os_plot
 
 # now on filtered tables
 presabs_table_f <- mpa3_species_decontam %>%
-  select(-matches("EXB|LIB|CSN|CSL|CSD|CSS")) %>%
+  select(-matches("ARS|EXB|LIB|CSN|CSL|CSD|CSS")) %>%
   adorn_totals(where = "col", name = "Sum_species.decontam") %>%
   mutate(Percent = Sum_species.decontam/sum(Sum_species.decontam)*100) %>%
+  # select(Species, Percent) %>%
+  arrange(Percent) %>%
   filter(Percent > 0.001) %>%
   select(-one_of(c("Sum_species.decontam","Percent"))) %>%
   gather("Library_ID","Counts",2:ncol(.)) %>%
@@ -288,6 +290,59 @@ plot1
 # ggsave("~/Desktop/shannon_calculus_time_periods.pdf", plot = plot1, device = "pdf",
 #        scale = 1, width = 7, height = 5, units = c("in"), dpi = 300)
 
+```
+
+```{r}
+# compare difference in the number of species between filtered and unfiltered tables
+filtered_sp_one <- mpa3_species_decontam.os %>%
+  full_join(., mpa3_species_decontam_filtered.os %>%
+              rename(os_filt = Observed_species), by = "Library_ID") %>%
+  mutate(difference = Observed_species - os_filt) %>%
+  left_join(., full_metadata %>%
+              select(Library_ID, Time_period, Site_code), by = "Library_ID") %>%
+  group_by(Time_period, Site_code, difference) %>%
+  mutate(Time_period = fct_relevel(Time_period, "Medieval","Industrial","Modern")) %>%
+  count(name = "No_samples") %>%
+  ggplot(., aes(x = difference, y = No_samples, fill = Site_code)) +
+    geom_bar(stat = "identity", position = position_dodge2(width = 0.9, preserve = "single"), color = "grey30", size = 0.2) +
+    geom_text(aes(label = No_samples), position=position_dodge(width=0.9), vjust=-0.25, size = 3) +
+    scale_fill_manual(values = Site_code_colors) +
+    theme_minimal(base_size = 12) +
+    scale_x_continuous(breaks=scales::pretty_breaks(n=8)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=10)) +
+    theme(axis.text.x = element_text(vjust = 0.5)) +
+    xlab("No. species removed by filtering") +
+    ylab("No. Samples")
+filtered_sp_one
+
+# compare difference in the number of species between filtered and unfiltered tables
+filtered_sp <- mpa3_species_decontam.os %>%
+  full_join(., mpa3_species_decontam_filtered.os %>%
+              rename(os_filt = Observed_species), by = "Library_ID") %>%
+  mutate(difference = Observed_species - os_filt) %>%
+  left_join(., full_metadata %>%
+              select(Library_ID, Time_period, Site_code), by = "Library_ID") %>%
+  group_by(Time_period, Site_code, difference) %>%
+  mutate(Time_period = fct_relevel(Time_period, "Medieval","Industrial","Modern"),
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","JAE","VLC")) %>%
+  count(name = "No_samples") %>%
+  ggplot(., aes(x = difference, y = No_samples, fill = Site_code)) +
+    geom_bar(stat = "identity", position = position_dodge2(width = 0.9, preserve = "single"), color = "grey30", size = 0.2) +
+    geom_text(aes(label = No_samples), position=position_dodge(width=0.9), vjust=-0.25, size = 3) +
+    scale_fill_manual(values = Site_code_colors) +
+    theme_minimal(base_size = 10) +
+    scale_x_continuous(breaks=scales::pretty_breaks(n=8)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=10)) +
+    theme(axis.text.x = element_text(vjust = 0.5)) +
+    xlab("No. species removed by filtering") +
+    ylab("No. Samples") +
+    facet_wrap(~Site_code, nrow = 2)
+
+filtered_sp
+
+ggsave("./06-publication/supplemental_figures/SXX15/filtered_species_counts.pdf", plot = filtered_sp, device = "pdf",
+       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+
 
 ```
 
@@ -334,7 +389,7 @@ mpa3_species_decontam %>%
 mpa3_species_decontam.matrix <- as.matrix(mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
   select(-one_of(poor_samples_mpa3)) %>%
-  select(-matches("EXB|LIB|CSN|CSL|CSD|CSS")) %>%
+  select(-matches("ARS|EXB|LIB|CSN|CSL|CSD|CSS")) %>%
   gather("Library_ID","Counts",2:ncol(.)) %>%
   spread(Species,Counts) %>% 
   column_to_rownames("Library_ID"))
@@ -369,7 +424,7 @@ shannon_sp_plot
 mpa3_species_decontam_filtered.matrix <- as.matrix(mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
   select(-one_of(poor_samples_mpa3)) %>%
-  select(-matches("EXB|LIB|CSN|CSL|CSD|CSS")) %>%
+  select(-matches("ARS|EXB|LIB|CSN|CSL|CSD|CSS")) %>%
   adorn_totals(where = "col", name = "Sum_species.decontam") %>%
   mutate(Percent = Sum_species.decontam/sum(Sum_species.decontam)*100) %>%
   filter(Percent > 0.001) %>%
@@ -491,7 +546,7 @@ plot_box_whisker(evenness.species_filtered, "Pileou_evenness", "Time_period", "T
 presabs_table_f <- mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
   select(-one_of(poor_samples_mpa3)) %>%
-  select(-matches("EXB|LIB|CSN|CSL|CSD|CSS")) %>%
+  select(-matches("ARS|EXB|LIB|CSN|CSL|CSD|CSS")) %>%
   adorn_totals(where = "col", name = "Sum_species.decontam") %>%
   mutate(Percent = Sum_species.decontam/sum(Sum_species.decontam)*100) %>%
   filter(Percent > 0.001) %>%
@@ -514,7 +569,7 @@ mpa3_species_decontam_filtered.alpha <- presabs_table_f %>%
 mpa3_species_decontam_filtered.matrix <- as.matrix(mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
   select(-one_of(poor_samples_mpa3)) %>%
-  select(-matches("EXB|LIB|CSN|CSL|CSD|CSS")) %>%
+  select(-matches("ARS|EXB|LIB|CSN|CSL|CSD|CSS")) %>%
   adorn_totals(where = "col", name = "Sum_species.decontam") %>%
   mutate(Percent = Sum_species.decontam/sum(Sum_species.decontam)*100) %>%
   filter(Percent > 0.001) %>%
@@ -560,7 +615,7 @@ mpa3_species_decontam_filtered.alpha_meta <- mpa3_species_decontam_filtered.alph
   drop_na(Observed_species) %>%
   filter(!str_detect(Library_ID, "ARS"))
 
-fwrite(mpa3_species_decontam_filtered.alpha, "~/archgen/microbiome_calculus/smoking_calculus/05-results.backup/mpa3_alpha_div_numbers.tsv", sep = "\t", quote = F)
+# fwrite(mpa3_species_decontam_filtered.alpha, "~/archgen/microbiome_calculus/smoking_calculus/05-results.backup/mpa3_alpha_div_numbers.tsv", sep = "\t", quote = F)
 
 ```
 
