--- a/02-scripts.backup/MID_mpa3_alphadiv_sub75bp.Rmd
+++ b/02-scripts.backup/MID_mpa3_alphadiv_sub75bp.Rmd
@@ -319,8 +319,68 @@ plot1
 # ggsave("~/Desktop/shannon_calculus_time_periods.pdf", plot = plot1, device = "pdf",
 #        scale = 1, width = 7, height = 5, units = c("in"), dpi = 300)
 
+# compare difference in the number of species between filtered and unfiltered tables
+mpa3_sub75bp_species_decontam.os %>%
+  full_join(., mpa3_sub75bp_species_decontam_filtered.os %>%
+              rename(os_filt = Observed_species), by = "Library_ID") %>%
+  mutate(difference = Observed_species - os_filt)
 
 ```
+
+```{r}
+# compare difference in the number of species between filtered and unfiltered tables
+filtered_sp_one <- mpa3_sub75bp_species_decontam.os %>%
+  full_join(., mpa3_sub75bp_species_decontam_filtered.os %>%
+              rename(os_filt = Observed_species), by = "Library_ID") %>%
+  mutate(difference = Observed_species - os_filt) %>%
+  left_join(., full_metadata %>%
+              select(Library_ID, Time_period, Site_code), by = "Library_ID") %>%
+  group_by(Time_period, Site_code, difference) %>%
+  mutate(Time_period = fct_relevel(Time_period, "Medieval","Industrial","Modern")) %>%
+  count(name = "No_samples") %>%
+  ggplot(., aes(x = difference, y = No_samples, fill = Site_code)) +
+    geom_bar(stat = "identity", position = position_dodge2(width = 0.9, preserve = "single"), color = "grey30", size = 0.2) +
+    geom_text(aes(label = No_samples), position=position_dodge(width=0.9), vjust=-0.25, size = 3) +
+    scale_fill_manual(values = Site_code_colors) +
+    theme_minimal(base_size = 12) +
+    scale_x_continuous(breaks=scales::pretty_breaks(n=8)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=10)) +
+    theme(axis.text.x = element_text(vjust = 0.5)) +
+    xlab("No. species removed by filtering") +
+    ylab("No. Samples")
+filtered_sp_one
+
+# compare difference in the number of species between filtered and unfiltered tables
+filtered_sp <- mpa3_sub75bp_species_decontam.os %>%
+  full_join(., mpa3_sub75bp_species_decontam_filtered.os %>%
+              rename(os_filt = Observed_species), by = "Library_ID") %>%
+  mutate(difference = Observed_species - os_filt) %>%
+  left_join(., full_metadata %>%
+              select(Library_ID, Time_period, Site_code), by = "Library_ID") %>%
+  group_by(Time_period, Site_code, difference) %>%
+  mutate(Time_period = fct_relevel(Time_period, "Medieval","Industrial","Modern"),
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","JAE","VLC")) %>%
+  count(name = "No_samples") %>%
+  ggplot(., aes(x = difference, y = No_samples, fill = Site_code)) +
+    geom_bar(stat = "identity", position = position_dodge2(width = 0.9, preserve = "single"), color = "grey30", size = 0.2) +
+    geom_text(aes(label = No_samples), position=position_dodge(width=0.9), vjust=-0.25, size = 3) +
+    scale_fill_manual(values = Site_code_colors) +
+    theme_minimal(base_size = 10) +
+    scale_x_continuous(breaks=scales::pretty_breaks(n=8)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=10)) +
+    theme(axis.text.x = element_text(vjust = 0.5)) +
+    xlab("No. species removed by filtering") +
+    ylab("No. Samples") +
+    facet_wrap(~Site_code, nrow = 2)
+
+filtered_sp
+
+ggsave("./06-publication/supplemental_figures/SXX15/filtered_species_counts_sub75bp.pdf", plot = filtered_sp, device = "pdf",
+       scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
+
+
+```
+
 
 ```{r}
 mpa3_sub75bp_species_decontam %>% 
